--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -4,6 +4,10 @@ beers-3=Volume is mandatory
 beers-4=Volume should be greater than zero
 beers-5=Beer already exist
 
+customer-1=Name is mandatory and cannot be blank
+customer-2=Email is mandatory and cannot be blank
+customer-3=Cellphone is mandatory and cannot be blank
+
 generic-1={0} is invalid
 
 error-1=Sorry, internal server error
