--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/beerstore
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/beerstore
 spring.datasource.username=postgres
-spring.datasource.password=******
+spring.datasource.password=kyt32014
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
