--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: kyt32014
+      POSTGRES_PASSWORD: sua_senha
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - 5432:5432
