Implementation edit for beer

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -3,6 +3,7 @@ beers-2=Type is mandatory
 beers-3=Volume is mandatory
 beers-4=Volume should be greater than zero
 beers-5=Beer already exist
+beer-id-not-exist=ID not exist to beer
 
 customer-1=Name is mandatory and cannot be blank
 customer-2=Email is mandatory and cannot be blank
