--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,12 +2,14 @@ beers-1=Name is mandatory and cannot be blank
 beers-2=Type is mandatory
 beers-3=Volume is mandatory
 beers-4=Volume should be greater than zero
-beers-5=Beer already exist
-beer-id-not-exist=ID not exist to beer
+beers-not-exist=beer is not exist
+beers-already-exist=The beer already is exist
 
 customer-1=Name is mandatory and cannot be blank
 customer-2=Email is mandatory and cannot be blank
 customer-3=Cellphone is mandatory and cannot be blank
+customer-not-exist=Customer is not exist
+customer-already-exist=The customer already is exist
 
 generic-1={0} is invalid
 
