Validation of user and group with rename tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=*****
+spring.datasource.password=kyt32014
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
@@ -8,3 +8,18 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+security.oauth2.resource.filter-order=3
+
+security.signing-key=MaYzkSjmkzPC57L
+security.encoding-strength=256
+security.security-realm=Spring Boot JWT Example Realm
+
+security.jwt.client-id=testjwtclientid
+security.jwt.client-secret=XY7kmzoNzl100
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=testjwtresourceid
+
+api.allow-origin=http://localhost:4200
