--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -11,6 +11,17 @@ customer-3=Cellphone is mandatory and cannot be blank
 customer-not-exist=Customer is not exist
 customer-already-exist=The customer already is exist
 
+group-1=Name is mandatory and cannot be blank
+
+user-1=User name is mandatory and cannot be blank
+user-2=Max length of 100
+user-3=Password is mandatory and cannot be blank
+user-4=Max length of 100
+user-5=Email is mandatory and cannot be blank
+user-6=Max length of 100
+user-7=Group cannot be null
+user-8=Min length of 1
+
 generic-1={0} is invalid
 
 error-1=Sorry, internal server error
