Add validation of object not valid in handler

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -24,4 +24,6 @@ user-8=Min length of 1
 
 generic-1={0} is invalid
 
+properties-invalid=Object not is valid
+
 error-1=Sorry, internal server error
