Add validation of user and implementation user service

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -11,6 +11,9 @@ customer-3=Cellphone is mandatory and cannot be blank
 customer-not-exist=Customer is not exist
 customer-already-exist=The customer already is exist
 
+user-not-exist=User is not exist
+user-already-exist=The user already is exist
+
 group-1=Name is mandatory and cannot be blank
 
 user-1=User name is mandatory and cannot be blank
