--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,6 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 ext['lombok.version'] = '1.18.0'
 
-
 repositories {
 	mavenCentral()
 }
@@ -31,12 +30,12 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.boot:spring-boot-starter-security')
-    implementation('org.springframework.security.oauth:spring-security-oauth2:2.1.0.RELEASE')
-    implementation('org.springframework.security:spring-security-jwt:1.0.7.RELEASE')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     runtimeOnly('org.postgresql:postgresql')
     compileOnly('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.hamcrest:hamcrest-all:1.3')
 	testCompile('org.mockito:mockito-core:2.+')
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+
 }
