--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=******
+spring.datasource.password=kyt32014
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
@@ -11,17 +11,7 @@ spring.jpa.open-in-view=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
-security.oauth2.resource.filter-order=3
-
-security.signing-key=MaYzkSjmkzPC57L
-security.encoding-strength=256
-security.security-realm=Spring Boot JWT Example Realm
-
-security.jwt.client-id=testjwtclientid
-security.jwt.client-secret=XY7kmzoNzl100
-security.jwt.grant-type=password
-security.jwt.scope-read=read
-security.jwt.scope-write=write
-security.jwt.resource-ids=testjwtresourceid
+api.jwt-secret=secret
+api.jwt-expiration=60
 
 api.allow-origin=http://localhost:4200
