Handler exception bad credentials

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -25,8 +25,16 @@ user-6=Max length of 100
 user-7=Group cannot be null
 user-8=Min length of 1
 
+auth-1=Email is mandatory and cannot be blank
+auth-2=Email not is valid
+auth-3=Email Length {min} and {max}
+auth-4=Password is mandatory and cannot be blank
+auth-5=Password Length {min} and {max}
+
 generic-1={0} is invalid
 
 properties-invalid=Object not is valid
+
+bad-credentials=User and/or password invalid
 
 error-1=Sorry, internal server error
