--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres?user=postgres&password=****
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres?user=postgres&password=kyt32014
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
@@ -8,6 +8,10 @@ spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#Exibe todos endpoints do actuator
+management.endpoints.beans.enabled=false
+management.endpoints.web.exposure.include=metrics
 
 api.jwt-secret=secret
 api.jwt-expiration=60000
