--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Exibe todos endpoints do actuator
 management.endpoints.beans.enabled=false
-management.endpoints.web.exposure.include=metrics
+management.endpoints.web.exposure.include=metrics,health
 
 api.jwt-secret=secret
 api.jwt-expiration=60000
